[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Retrospect.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Images/speaker-icon-on.png" type="Texture" id=4]
[ext_resource path="res://Images/speaker-icon.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="StartButton" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 130.0
margin_top = -11.0
margin_right = -130.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 1 )
text = "Start!"

[node name="AudioButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -124.0
margin_top = -94.0
margin_right = -113.0
margin_bottom = -84.0
toggle_mode = true
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="toggled" from="AudioButton" to="." method="_on_AudioButton_toggled"]
